tests/error/equalsString-wrong-1st-argument.uplc
(program 0.0.0 [ [ (builtin equalsString) (con integer 0)] (con string " mundo!") ])